crates/musq/tests/trybuild/fail_sql.stderr
error: missing positional argument
 --> tests/trybuild/fail_sql.rs:4:13
  |
4 |     let _ = sql!("SELECT {}", )?;
  |             ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql` (in Nightly builds, run with -Z macro-backtrace for more info)
